<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/half_circle_signin"
    android:noHistory="true">

    <ScrollView
        android:id="@+id/scrollViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:noHistory="true">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="228dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@drawable/button_without_corners"
                android:backgroundTint="#0277BD"
                android:padding="8sp"
                android:text="@string/signIn"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/buttonSignUp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@drawable/button_without_corners"
                android:backgroundTint="#FFFFFF"
                android:onClick="signUp"
                android:padding="8sp"
                android:text="@string/signUp"
                android:textColor="#C3C9D4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonSignIn"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/edittext_without_corners"
                android:elevation="6sp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#9E9E9E"
                android:textColorHint="#BBC1CE"

                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/edittext_without_corners"
                android:elevation="6sp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="#9E9E9E"
                android:textColorHint="#BBC1CE"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_without_corners"
                android:backgroundTint="#00C4CC"
                android:onClick="login"
                android:text="@string/continueNext"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>