<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_mascota"
            android:title="@string/myPet"/>
        <item
            android:id="@+id/nav_paseos"
            android:title="@string/walk"/>
        <item
            android:id="@+id/nav_mapa"
            android:title="@string/map"/>
        <item
            android:id="@+id/nav_salud"
            android:title="@string/health"/>
        <item
            android:id="@+id/nav_eventos"
            android:title="@string/events"/>
    </group>


    <item android:title="@string/accountSettings">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:title="@string/myProfile"/>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>